--- a/applistadder/app/src/main/AndroidManifest.xml
+++ b/applistadder/app/src/main/AndroidManifest.xml
@@ -8,39 +8,35 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppListAdder"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".management.main.MainManagement"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppListAdder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".RegisterAccountActivity"
+            android:name=".management.register.MainRegisterPage"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppListAdder" />
+            android:theme="@style/Theme.AppListAdder">
 
+        </activity>
         <activity
-            android:name=".LoginAccountActivity"
+            android:name=".management.login.MainLoginPage"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppListAdder" />
+            android:theme="@style/Theme.AppListAdder">
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppListAdder" />
-
-
+        </activity>
     </application>
 
 </manifest>
